# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
authors = ["Dmitry Melnikov <d.dash.mv@gmail.com>"]
description = "Back for the up, written in Rust"
edition = "2021"
rust-version = "1.65"
name = "sprint-plannerbackend-rust"
version = "0.1.0"
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
reqwest = "0.11.13"
serde = "1.0.148"
serde_derive = "1.0.148"
serde_json = "1.0.89"
structopt = "0.3.26"
tokio = "1.22.0"
uuid = {version="1.2.2",features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
# exitfailure = "0.5.1"
# futures = "0.3.21"
# reqwest = {version = "0.11.10", features = ["json"]}
# rust_decimal = "1.23.1"

# tokio = { version = "1.17.0", features = ["full"] }


# [dev-dependencies]
# cargo-husky = "1.5.0"
# mockall = "0.11.0"
